Squashing more styling issues

--- a/app/assets/stylesheets/base/main.scss
+++ b/app/assets/stylesheets/base/main.scss
@@ -76,8 +76,7 @@ a.welcome:hover {
 }
 
 .main {
-  // TODO
-  // min-height: 550px;
+  min-height: 550px;
   width: 100%;
   padding-left: 20px;
   padding-right: 20px;
